tests/ui/parser/issues/issue-93282.stderr
error: expected `while`, `for`, `loop` or `{` after a label
  --> $DIR/issue-93282.rs:2:9
   |
LL |     f<'a,>
   |         ^ expected `while`, `for`, `loop` or `{` after a label
   |
help: add `'` to close the char literal
   |
LL |     f<'a',>
   |         +

error: expected one of `.`, `:`, `;`, `?`, `for`, `loop`, `while`, `}`, or an operator, found `,`
  --> $DIR/issue-93282.rs:2:9
   |
LL |     f<'a,>
   |         ^ expected one of 9 possible tokens
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     f::<'a,>
   |      ++

error: expected `while`, `for`, `loop` or `{` after a label
  --> $DIR/issue-93282.rs:13:11
   |
LL |     bar('y, x);
   |           ^ expected `while`, `for`, `loop` or `{` after a label
   |
help: add `'` to close the char literal
   |
LL |     bar('y', x);
   |           +

error[E0308]: mismatched types
  --> $DIR/issue-93282.rs:13:9
   |
LL |     bar('y, x);
   |     --- ^^ expected `usize`, found `char`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/issue-93282.rs:7:4
   |
LL | fn bar(a: usize, b: usize) -> usize {
   |    ^^^ --------

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
